# python-timevec

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: octocov.yml  pypi-publish.yml  python-test.yml
examples/: plot.py
tests/: test_builtin_math.py  test_many_dates.py  test_numpy.py  test_numpy_datetime64.py  test_same_result.py  test_util.py
timevec/: __init__.py  builtin_math.py  numpy.py  numpy_datetime64.py  util.py
